--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -115,27 +115,22 @@ A visual association between changes of Republican Vote Share and Hispanic Popul
 I determined two main ways to examine the robustness of these models: 1) I examined the model outputs at higher level of aggregation by constructing the same models using a subset of data by state. In this case, I used Florida, which is my home state and one that has received a very high influx of hispanics over the last decade. Despite, the smaller sample, which inherently causes decreased statistical significance, HHH's overall conclusions are validated. In addition, I constructed a series of models excluding a different state each time to examine whether any single state was shaping the conclusions and found that no individual state is driving the original conclusions. 2) Heterogeneity in fixed effects models means different means among categories such as states and year. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors [@fixed]. However, fixed effects models can control and estimate these effects. I constructed mirror models using plm(y ~ x, data = mydata, within = “state”) and found that a fixed effects model do not alter the overarching conclusions even when absorbing the effects particular to each state [@fixed2]. Both methods resulted in successful measures of robustness confirming HHH's original quantitative findings, if not the exact theoretical claim. 
 
 In addition to exploring the robustness of HHH's findings, I built a new model using the original datasets to explore the association between economic indicators and changes in Republican voters. I constructed a series of models that explain shifts in GOP share of voters in terms of changes in hispanic proportion, changes in unemployment, and proportion change of poor to consider the economic influences on Republican voters share shifts respectively and in combination. In addition, I construct a model to examine how the interaction of change in unemployment and change in Hispanic proportion affect GOP vote share in each time period. I also construct a model using only changes in unemployment and proportion change of poor as explanatory variables to GOP share in these intervals. The results show that unemployment may have an even stronger effect on GOP share of voters between 2011-2016, indicating an interesting trend in the way voters appear to be penalizing candidates in general elections.
+
+Through a brief overview of the relevant literature and a visual presentation of the data, I introduce the scope of this project. I then conduct 3 robustness test to examine the validity and reliability of HHH's findings and later expand their analysis through a new model exploring economic indicators' and their relation to GOP vote share in association with changes in Hispanic population proportion. I include an appendix with my R-based replication of the main models of the original paper. 
  
 
 
-\newpage
 # Paper & Literature Review
 
-coupled ACS data and Census data to construct measures of demographic changes for 2000 to 2016 and 2011 to 2016. 
 
-These windows capture 2 theoretically distinct characterizations of immigrant threat, either of
-which is plausible. The 1st is the idea that cumulative, longterm changes in local demographics may create citizen unease
-that was activated by Trump’s candidacy. The 2nd represents a
-characterization in which more recent changes are most salient
-for individuals’ perceptions of their local communities. 
+As HHH explain in their paper, "immigration and demographic change have become highly salient in American politics, partly because of the 2016 campaign of Donald Trump" [@research]. President Trump's victory seemed to solidify the previously proposed notion that demographic changes lead to "threatened reponse" in native voters realigning voting patterns on "the basis of ethnicity, nativity, nationalism, and education" [@research]. This theory implies that as demographic changes occur, native voters shift towards more populist and outspoken anti-immigration candidates. Research of anti-immigrant and Brexit, U.K. independent party, support in the United Kingdom found that these attitudes are higher in "localities that have low immigrant shares but recent demographic changes" [@brexit]. This trend is also true of other countries in continental Europe. In the United States, previous research with county-level data have shown that pro-GOP shifts are only associated with increases in low-skilled immigrants while increases in high-skill immigrants actually increases support for the Democratic parties [@usimpact]. 
 
-Using a data set of nearly 32000 precincts across the states of Florida, Georgia, Michigan, Nevada, Ohio, Pennsylvania, and Washington, HHH aimed to understand whether demographic changes at low levels of aggregation were associated with vote shifts toward an anti-immigration presidential candidate between 2012 and 2016.
+Other studies at the county-level have also found an association between percentage increase in Hispanic population and shifts to the Republican Party from 2012-2016 [@enos1]. Reny, Collingwood, and Valenzuela (2019), another study on Trump's political victory, finds that racial attitudes, and not economics, are largely associated with the shift in working-class whites' vote in 2016. However, their findings are not associated with local influx of Hispanics or demographic shifts, but rather the nationalist rethoric of the candidate [@ref28]. Consequently, the theory remains inconclusive as Reny, Collingwood, and Valenzuela failed to find such a strong relationship between proportion change of Hispanics and Republican support at the local level and Newman, Shah, and Collingwood (2018) "show that the relationship between local demographic change and Trump favorability among Republicans was time-dependent" [@ref29].
 
-if something is worth understanding about the literature
-any relevant literature that has come out since then
-provide a summary in whatever level of detail you think is appropriate. 
 
-Notably, the authors discuss the research on the different ways in which influx of immigrants affect voters' response, but the variables used in this analysis mainly focus on influx of Hispanics
+HHH combined American Community Survey (ACS) data and Census data to construct measures of demographic changes for 2000 to 2016 and 2011 to 2016. These time intervals capture "2 theoretically distinct characterizations of immigrant threat" First, HHH noted the potential for citizens' anxiety caused by "cumulative, longterm changes in local demographics" and activated by Trump’s candidacy. HHH also noted the theoretical pathway where "more recent changes are most salient for individuals’ perceptions of their local communities," which would result in threatened response [@research]. Using a precinct-level dataset of election results and demographic measures for almost 32,000 precincts in the states of Florida, Georgia, Michigan, Nevada, Ohio, Pennsylvania, and Washington, HHH find that the influxes in Hispanic and foreign born groups did not influence voting behavior in favor of Trump, but rather (in a slight way) benefited his opponent in those particular areas. 
+
+HHH employ OLS regression analyses with varying explanatory variable(s) specifications and measures of 'demographic change' resulting in 8 main regression models as well as loess lines that visually and mathematically demonstrate the relevant results. They study change in proportion of Hispanics and proportion change of Hispanic proportions concluding that in places with demographic shifts, Trump did not benefit, but, in fact, Clinton did. In other words, local demographic changes are not, on their own, increasing support for anti-immigration candidates. HHH argue that this means the precincts in question are not engaging in the previously studied “threatened response” associated with voting behavior in light of immigration influxes. The authors acknowledge that "despite its disparate local impacts, immigration may be a symbolic, nationalized issue whose effects, do not depend on local experiences" [@research]. However, the actual connection has yet to be proven empirically and it is tough to address it given several exogenous factors influencing voting patterns. Some of these factors include, but are not limited to, greater exposure to international trade and declining economic prospects for the less educated. Despite these unexplored conditions, the authors explain that 'positive intergroup contact' could be responsible for the seemingly 'supportive' voting patterns at low levels of aggregation (locally). This idea is partially supported by Enos (2014), whose study shows how individuals with long(er) exposures to minority groups, tend to have less exclusionary attitudes than those who are exposed to them only briefly or those who have never been exposed at all [@enos2]. Notably, the authors discuss the research on the different ways in which influx of immigrants affect voters' response, but the variables used in this analysis mainly focus on influx of Hispanics, who may or may not be immigrants themselves. 
 
 
 # Replication
@@ -511,11 +506,7 @@ Table 4 explores the association between economic indicators and changes in Repu
 
 # Conclusion
 
-The first paragraph is a review of the paper you are replicating. Place it within the relevant literature, via a key citation or two. Highlight implications and caveats. 
-
-The second paragraph provides more details on your replications.
-
-Conclusion, the last paragraph is where you get to speculate: What does it all mean? What should we research next?
+HHH argue that demographic shifts did not benefit Trump at the precinct level during the 2016 election, but rather his opponent. The authors find consistent evidence that hispanic influx led to decreased republican vote share. My replication was successful despite the deviances inherent to a translation of the original models to R. The three robustness tests further confirmed HHH's findings, which allowed me to explore a new model using economic indicators as explanatory variables to GOP vote share. The results are intriguing indicating a stronger relationship between increased unemployment and GOP vote share than any of the other variables studied. This finding suggests opportunities for further studies exploring the mechanisms through which unemployment affects the outcome. 
 
 
 
