--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52,3 +52,43 @@
   publisher = {Princeton University},
   year = {2010},
   url = {https://rstudio-pubs-static.s3.amazonaws.com/372492_3e05f38dd3f248e89cdedd317d603b9a.html#11_read_and_discuss}}
+  
+  
+@paper{brexit,
+  title = {Taking back control? Investigating the role of immigration in the 2016 vote for Brexit},
+  author = {M. Goodwin and C. Milazzo},
+  publisher = {Br. J. Polit. Int. Relat. 19, 450–464},
+  year = {2017}}
+
+
+@paper{usimpact,
+  title = {The political impact of immigration: Evidence from the United States},
+  author = {A. M. Mayda and G. Peri and W. Steingress},
+  publisher = {National Bureau of Economic Research, Cambridge, MA},
+  year = {2018}}
+
+@paper{enos1,
+  title = {The Space Between Us},
+  author = {R. Enos},
+  publisher = {Cambridge University Press, Cambridge, UK},
+  year = {2017}}
+
+
+@paper{ref28,
+  title = {Vote switching in the 2016 election: How racial and immigration attitudes, not economics, explain shifts in white voting},
+  author = {T. Reny and L. Collingwood and A. Valenzuela},
+  publisher = {Public Opin. Q. 83, 91–113},
+  year = {2019}}
+
+
+@paper{ref29,
+  title = {Race, place, and building a base.},
+  author = {B. Newman and S. Shah and L. Collingwood},
+  publisher = {Public Opin. Q. 82, 122–134},
+  year = {2018}}
+  
+@paper{enos2,
+  title = {Causal effect of intergroup contact on exclusionary attitudes},
+  author = {R. Enos},
+  publisher = {Stanford University, CA},
+  year = {2014}}
