--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -44,7 +44,7 @@ Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associa
 
 # Introduction
 
-Immigration and demographic changes have become salient in American political discourse in great part due to Trump's capaign for tthe 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hilla, Hopkins, and Huberc, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States [@. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper can be found [here](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf).
+Immigration and demographic changes have become salient in American political discourse in great part due to Trump's capaign for tthe 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hilla, Hopkins, and Huberc, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper can be found [here](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf).
 
 
 Using R and RStudio, I succesfully replicated HHH’s results, except for minor discrepancies which do not affect their conclusions [@R]. Some of these discepancies can be associated with the inherent assumptions of the Stata software versus R. The replication process was lengthy and focused mainly on translating local variables from Stata (the coding language in which the original analysis was conducted) into R using the original datasets to construct the main eight models supporting the argument. A step by step replication of the 8 main models and graphics of the paper are included in the appendix. Thanks to the generosity of the authors the code and data used in this project are available at [Harvard Dataverse](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/J5GCZQ). For more information about this project please visit my project's Github repo^[[The data and code for this project can be found here.](https://github.com/deboragonzalez/gop_voters_hisp_changes)].
