editing in progress - lit review

--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -2,7 +2,11 @@
 title: 'Local Demographic Changes and US Presidential Voting, 2012-2016: A Replication'
 author: "Debi Gonzalez"
 date: "4/25/2020"
-output: bookdown::pdf_document2
+header-includes:
+    - \usepackage{setspace}\doublespacing
+output:
+  bookdown::pdf_document2: default
+toc: false
 bibliography: bibliography.bib
 ---
 
@@ -38,22 +42,23 @@ precinct_data <- read_dta("dataverse_files/HHHDemogThreatRepArchive/PrecinctData
 \newpage
 # Abstract
 
-Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hilla, Hopkins and Huberc’s results, except for minor discrepancies which do not affect their conclusions. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. Another test focusing on the effect of individual states on the overall findings was also found to support the original paper's robustness. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for Hispanic proportion. The latter models appear to indicate a stronger relationship between unemployment proportion change and GOP vote share than between changes in Hispanic proportion and GOP vote share, which suggests an opportunity for further research. 
+Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hilla, Hopkins and Huberc’s results. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. Another test focusing on the effect of any individual state on the overall outcome was also found to support the original paper's robustness. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for change in percent Hispanic. The latter models indicate a stronger relationship between unemployment proportion change and GOP vote share than between changes in Hispanic proportion and GOP vote share, which suggests an opportunity for further research. 
 
 
 
 # Introduction
 
-Immigration and demographic changes have become salient in American political discourse in great part due to Trump's capaign for tthe 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hilla, Hopkins, and Huberc, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper can be found [here](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf).
+Immigration and demographic changes have become salient in American political discourse in great part due to Trump's campaign for the 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hilla, Hopkins, and Huberc, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper, [linked here,](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf) can be found online through PNAS.org or Harvard's Hollis system.
 
 
-Using R and RStudio, I succesfully replicated HHH’s results, except for minor discrepancies which do not affect their conclusions [@R]. Some of these discepancies can be associated with the inherent assumptions of the Stata software versus R. The replication process was lengthy and focused mainly on translating local variables from Stata (the coding language in which the original analysis was conducted) into R using the original datasets to construct the main eight models supporting the argument. A step by step replication of the 8 main models and graphics of the paper are included in the appendix. Thanks to the generosity of the authors the code and data used in this project are available at [Harvard Dataverse](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/J5GCZQ). For more information about this project please visit my project's Github repo^[[The data and code for this project can be found here.](https://github.com/deboragonzalez/gop_voters_hisp_changes)].
+Using R and RStudio, I succesfully replicated HHH’s results, except for minor discrepancies which do not affect their conclusions [@R]. Some of these discepancies can be associated with the inherent assumptions of the Stata software versus R. The replication process was lengthy and focused mainly on translating local variables from Stata (the coding language in which the original analysis was conducted) into R using the original datasets to construct the main eight models supporting the argument. A step by step replication of the 8 main models and graphics of the paper are included in the appendix. Thanks to the generosity of the authors, the code and data used in this project are available at [Harvard Dataverse](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/J5GCZQ). For more information about this project, please visit my project's Github repo^[[The data and code for this project can be found in Github.](https://github.com/deboragonzalez/gop_voters_hisp_changes)].
 
 
 
 ```{r graphic, warning = FALSE}
 
-# This graphic is an initial attempt to replicate Fig. 1A from the paper:
+# This graphic is an initial attempt to replicate Fig. 1A from the paper, which
+# later became a figure in my own replication:
 
 # Change in Republican vote share, 2012 to 2016, and change in Hispanic
 # population 2011-2016. Note: Points are random samples of 2,000 precincts.
@@ -99,8 +104,9 @@ try2 %>%
   
   # This will emphasize the part of the graph that is most dense.
   
-  labs(title = "Republican Vote Share Change vs. Hispanic Population Share Change",
-       subtitle = "How changes in hispanic population share from 2011 to 2016 relate \nto changes in GOP Votes share from the 2012 to the 2016 election", caption = "Source: HHH Demographic Threat Data Archive: Geo_Scope",
+  labs(title = "Figure 1: Republican Vote Share Change vs. Hispanic Population Share Change",
+       subtitle = "How changes in hispanic population share from 2011 to 2016 relate \nto changes in GOP Votes share from the 2012 to the 2016 election", 
+       caption = "Source: HHH Demographic Threat Data Archive: Geo_Scope",
        x = expression(Delta*" Republican Vote Share 2012-2016"),
        y = expression(Delta*" Hispanic Population Share 2011-2016"),
        size = "Number of Voters \nby Precinct in 2016",
@@ -109,14 +115,14 @@ try2 %>%
  
   
 ```
-A visual association between changes of Republican Vote Share and Hispanic Population Proportion Change from 2012-2016. Random sample of 2000 precincts colored by state [@ggplot]. A loess line highlights the general trend of the data [@smooth]. I also added the aesthetic enhancement of size as number of voters in 2016 in each precinct [@data].
+Figure 1 shows a visual association between changes of Republican Vote Share and Hispanic Population Proportion Change from 2012-2016. Random sample of 2000 precincts colored by state [@ggplot]. A loess line highlights the general trend of the data [@smooth]. The size feature is an aesthetic enhancement presenting the number of voters per precinct in 2016 [@data].
  
  
-I determined two main ways to examine the robustness of these models: 1) I examined the model outputs at higher level of aggregation by constructing the same models using a subset of data by state. In this case, I used Florida, which is my home state and one that has received a very high influx of hispanics over the last decade. Despite, the smaller sample, which inherently causes decreased statistical significance, HHH's overall conclusions are validated. In addition, I constructed a series of models excluding a different state each time to examine whether any single state was shaping the conclusions and found that no individual state is driving the original conclusions. 2) Heterogeneity in fixed effects models means different means among categories such as states and year. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors [@fixed]. However, fixed effects models can control and estimate these effects. I constructed mirror models using plm(y ~ x, data = mydata, within = “state”) and found that a fixed effects model do not alter the overarching conclusions even when absorbing the effects particular to each state [@fixed2]. Both methods resulted in successful measures of robustness confirming HHH's original quantitative findings, if not the exact theoretical claim. 
+I determined two main ways to examine the robustness of these models: 1) I examine state effects first by constructing the same models using a subset of data by state. In this case, I used Florida, which is my home state and one that has received a very high influx of hispanics over the last decade. Despite the smaller sample, which inherently causes decreased statistical significance, HHH's overall conclusions are validated. In addition, I constructed a series of models excluding a different state each time to examine whether any single state was driving HHH's findings and found that no individual state is overwhelmingly shaping the original conclusions. 2) I also examine whether a fixed effects model challenges the authors. Heterogeneity in fixed effects models means different means among categories such as states and year. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories (i.e. state), and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors [@fixed]. However, fixed effects models can control and estimate these effects, so I constructed mirror models using plm(y ~ x, data = mydata, within = “state”) and found that fixed effects versions of the models do not alter the overarching conclusions even when absorbing the effects particular to each state [@fixed2]. Both methods resulted in successful measures of robustness confirming HHH's original quantitative findings, if not the exact theoretical claim. 
 
-In addition to exploring the robustness of HHH's findings, I built a new model using the original datasets to explore the association between economic indicators and changes in Republican voters. I constructed a series of models that explain shifts in GOP share of voters in terms of changes in hispanic proportion, changes in unemployment, and proportion change of poor to consider the economic influences on Republican voters share shifts respectively and in combination. In addition, I construct a model to examine how the interaction of change in unemployment and change in Hispanic proportion affect GOP vote share in each time period. I also construct a model using only changes in unemployment and proportion change of poor as explanatory variables to GOP share in these intervals. The results show that unemployment may have an even stronger effect on GOP share of voters between 2011-2016, indicating an interesting trend in the way voters appear to be penalizing candidates in general elections.
+In addition to exploring the robustness of HHH's findings, I built a new model using the original datasets to explore the association between economic indicators and changes in share of Republican voters. I constructed a series of models that explain shifts in GOP share of voters in terms of changes in hispanic proportion, changes in unemployment, and proportion change of poor to consider the economic influences on the share of Republican voters at the precinct level respectively and in combination. In addition, I construct a model to examine how the interaction of change in unemployment and change in Hispanic proportion affect GOP vote share in each time period. I also construct a model using only changes in unemployment and proportion change of poor as explanatory variables to GOP share in this interval. The results show that unemployment may have an even stronger effect on GOP share of voters between 2011-2016 than any other explanatory variable, indicating an interesting trend in the way voters appear to be penalizing candidates in general elections.
 
-Through a brief overview of the relevant literature and a visual presentation of the data, I introduce the scope of this project. I then conduct 3 robustness test to examine the validity and reliability of HHH's findings and later expand their analysis through a new model exploring economic indicators' and their relation to GOP vote share in association with changes in Hispanic population proportion. I include an appendix with my R-based replication of the main models of the original paper. 
+Through a brief overview of the relevant literature and a visual presentation of the data, I introduce the scope of this project. I then conduct 3 robustness tests to examine the validity and reliability of HHH's findings and later expand their analysis through a new model exploring economic indicators' and their relation to GOP vote share in association with changes in Hispanic population proportion. I include an appendix with my R-based replication of the main models of the original paper. 
  
 
 
@@ -135,7 +141,7 @@ HHH employ OLS regression analyses with varying explanatory variable(s) specific
 
 # Replication
 
-I was able to successfully translate and replicate the main analysis of the original paper despite minor deviances that did not affect the overall conclusions of the study. Since the original analysis was done in Stata, this project required the translation of the code and a comparative analysis. A full replication of Table 1 and Figure 1 using the most approximate R tools of the original paper can be found in the appendix. 
+I was able to successfully translate and replicate the main analysis of the original paper despite minor deviances that did not affect the overall conclusions of the study. Since the original analysis was done in Stata, this project required the translation of the code and a comparative analysis between the replicated and original output. A full replication of Table 1 and Figure 1 using the most approximate R tools of the original paper can be found in the appendix. 
 
 \newpage
 # Robustness Check #1: Subsetting the Data
