fl subset edited... missing table caption alignment. On to state by state subset for model 3

--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -134,14 +134,14 @@ As HHH explain in their paper, "immigration and demographic change have become h
 Other studies at the county-level have also found an association between percentage increase in Hispanic population and shifts to the Republican Party from 2012-2016 [@enos1]. Reny, Collingwood, and Valenzuela (2019), another study on Trump's political victory, finds that racial attitudes, and not economics, are largely associated with the shift in working-class whites' vote in 2016. However, their findings are not associated with local influx of Hispanics or demographic shifts, but rather the nationalist rethoric of the candidate [@ref28]. Consequently, the theory remains inconclusive as Reny, Collingwood, and Valenzuela failed to find such a strong relationship between proportion change of Hispanics and Republican support at the local level and Newman, Shah, and Collingwood (2018) "show that the relationship between local demographic change and Trump favorability among Republicans was time-dependent" [@ref29].
 
 
-HHH combined American Community Survey (ACS) data and Census data to construct measures of demographic changes for 2000 to 2016 and 2011 to 2016. These time intervals capture "2 theoretically distinct characterizations of immigrant threat" First, HHH noted the potential for citizens' anxiety caused by "cumulative, longterm changes in local demographics" and activated by Trump’s candidacy. HHH also noted the theoretical pathway where "more recent changes are most salient for individuals’ perceptions of their local communities," which would result in threatened response [@research]. Using a precinct-level dataset of election results and demographic measures for almost 32,000 precincts in the states of Florida, Georgia, Michigan, Nevada, Ohio, Pennsylvania, and Washington, HHH find that the influxes in Hispanic and foreign born groups did not influence voting behavior in favor of Trump, but rather (in a slight way) benefited his opponent in those particular areas. 
+HHH combined American Community Survey (ACS) data and Census data to construct measures of demographic changes for 2000 to 2016 and 2011 to 2016. These time intervals capture "2 theoretically distinct characterizations of immigrant threat" [@research]. First, HHH noted the potential for citizens' anxiety caused by "cumulative, long term changes in local demographics" that could have been activated by Trump’s candidacy. HHH also noted the theoretical pathway where "more recent changes are most salient for individuals’ perceptions of their local communities," which would result in more immediate threatened response [@research]. Using a precinct-level dataset of election results and demographic measures for almost 32,000 precincts in the states of Florida, Georgia, Michigan, Nevada, Ohio, Pennsylvania, and Washington, HHH find that the influxes in Hispanic and foreign born groups did not influence voting behavior in favor of Trump, but rather (in a slight way) benefited his opponent in those particular areas. 
 
-HHH employ OLS regression analyses with varying explanatory variable(s) specifications and measures of 'demographic change' resulting in 8 main regression models as well as loess lines that visually and mathematically demonstrate the relevant results. They study change in proportion of Hispanics and proportion change of Hispanic proportions concluding that in places with demographic shifts, Trump did not benefit, but, in fact, Clinton did. In other words, local demographic changes are not, on their own, increasing support for anti-immigration candidates. HHH argue that this means the precincts in question are not engaging in the previously studied “threatened response” associated with voting behavior in light of immigration influxes. The authors acknowledge that "despite its disparate local impacts, immigration may be a symbolic, nationalized issue whose effects, do not depend on local experiences" [@research]. However, the actual connection has yet to be proven empirically and it is tough to address it given several exogenous factors influencing voting patterns. Some of these factors include, but are not limited to, greater exposure to international trade and declining economic prospects for the less educated. Despite these unexplored conditions, the authors explain that 'positive intergroup contact' could be responsible for the seemingly 'supportive' voting patterns at low levels of aggregation (locally). This idea is partially supported by Enos (2014), whose study shows how individuals with long(er) exposures to minority groups, tend to have less exclusionary attitudes than those who are exposed to them only briefly or those who have never been exposed at all [@enos2]. Notably, the authors discuss the research on the different ways in which influx of immigrants affect voters' response, but the variables used in this analysis mainly focus on influx of Hispanics, who may or may not be immigrants themselves. 
+HHH employ OLS regression analyses with varying explanatory variable(s) specifications and measures of 'demographic change' resulting in 8 main regression models as well as loess lines that visually and mathematically demonstrate the relevant results. They study change in proportion of Hispanics and proportion change of Hispanic proportions concluding that in places with demographic shifts, Trump did not benefit, but, in fact, Clinton did. In other words, local demographic changes are not, on their own, increasing support for anti-immigration candidates. HHH argue that this means the precincts in question are not engaging in the previously studied “threatened response” associated with voting behavior in light of immigration influxes. The authors acknowledge that "despite its disparate local impacts, immigration may be a symbolic, nationalized issue whose effects, do not depend on local experiences" [@research]. However, the actual connection has yet to be proven empirically and it is tough to address it given several exogenous factors influencing voting patterns. Some of these factors include, but are not limited to, greater exposure to international trade and declining economic prospects for the less educated. Despite these unexplored conditions, the authors explain that 'positive intergroup contact' could be responsible for the seemingly 'supportive' voting patterns at low levels of aggregation (locally). This idea is partially supported by Enos (2014), whose study shows how individuals with long(er) exposures to minority groups, tend to have less exclusionary attitudes than those who are exposed to them only briefly or those who have never been exposed at all [@enos2]. Notably, there seems to be a slight discrepancy between the apparent theoretical discussion and the actual numerical findings. The authors discuss the research in light of the different ways in which influx of immigrants affect voters' response, but the variables used in this analysis mainly focus on influx of Hispanics, who may or may not be immigrants themselves. 
 
 
 # Replication
 
-I was able to successfully translate and replicate the main analysis of the original paper despite minor deviances that did not affect the overall conclusions of the study. Since the original analysis was done in Stata, this project required the translation of the code and a comparative analysis between the replicated and original output. A full replication of Table 1 and Figure 1 using the most approximate R tools of the original paper can be found in the appendix. 
+I was able to successfully translate and replicate the main analysis of the original paper despite minor deviances that did not affect the overall conclusions of the study. Since the original analysis was done in Stata, this project required the translation of the code and a comparative analysis between the replicated and original output. A full replication of Table 1 and Figure 1  of the original paper using the most approximate R tools can be found in the appendix. 
 
 \newpage
 # Robustness Check #1: Subsetting the Data
@@ -245,12 +245,18 @@ stargazer(flm1, flm2, flm3, flm4, flm5, flm6, flm7, flm8,
                               "Prop. Hispanic 2011", "Prop. Change in Prop. Hispanic, 2000 to 2016",
                               "Change in Prop. Hispanic, 2000 to 2016","Prop. Hispanic 2000"),
          omit.stat = c("f", "ser"),
-         dep.var.labels.include = FALSE,
+         dep.var.labels.include = TRUE, dep.var.labels = "GOP Vote Share Change",
          
          # Need to work on getting rid of dependent variable row.
          
          column.sep.width = "-20pt",
-         no.space = T)
+         no.space = T,
+         notes.align = "l",
+         notes = "\\parbox[t]{10cm}{Robust standard errors are in parentheses. Precinct-level analysis in FL; weighted to number of votes 2012; proportional changes top and bottom coded at 1 and −1. Note: Dependent variable is change in GOP vote share, 2012 to 2016.}",
+         notes.append = TRUE)
+
+# *P < 0.05; **P < 0.01. Precinct-level analysis; weighted to number of votes 2012; proportional changes top
+# and bottom coded at 1 and −1. Note: Dependent variable is change in GOP vote share, 2012 to 2016. Prop., proportion.
 ```
 
 
