--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -4,6 +4,7 @@ author: "Debi Gonzalez"
 date: "4/25/2020"
 header-includes:
     - \usepackage{setspace}\doublespacing
+    - \usepackage{float}
 output:
   bookdown::pdf_document2: default
 toc: false
@@ -40,13 +41,12 @@ precinct_data <- read_dta("dataverse_files/HHHDemogThreatRepArchive/PrecinctData
 ```
 
 \newpage
-# Abstract
+# Abstract {-}
 
 Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hilla, Hopkins and Huberc’s results. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. Another test focusing on the effect of any individual state on the overall outcome was also found to support the original paper's robustness. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for change in percent Hispanic. The latter models indicate a stronger relationship between unemployment proportion change and GOP vote share than between changes in Hispanic proportion and GOP vote share, which suggests an opportunity for further research. 
 
 
-
-# Introduction
+# Introduction {-}
 
 Immigration and demographic changes have become salient in American political discourse in great part due to Trump's campaign for the 2016 election. Inspired by previous inconclusive research on threatened response and county-level electoral outcomes, Hilla, Hopkins, and Huberc, henceforth HHH, compiled a novel, precinct-level data set of election results and census demographic measures for almost 32,000 precincts across 7 states to explore how demographic changes influenced republican vote share in affected precincts across the United States. The authors employed regression models with varying explanatory variables and measures of demographic change. Through this analysis, the authors find consistent evidence that 'influxes of Hispanics or non-citizen immigrants' were associated with decreased Republican vote share, which was assumed by the authors to mean shifts towards Trump's opponent in 2016 [@research]. Dan Hopkins offers an overview and a link to the data for this research paper on [his website](http://web.sas.upenn.edu/danhop/research/">his website). The full original paper, [linked here,](https://www-pnas-org.ezp-prod1.hul.harvard.edu/content/pnas/116/50/25023.full.pdf) can be found online through PNAS.org or Harvard's Hollis system.
 
@@ -126,7 +126,7 @@ Through a brief overview of the relevant literature and a visual presentation of
  
 
 
-# Paper & Literature Review
+# Paper & Literature Review {-}
 
 
 As HHH explain in their paper, "immigration and demographic change have become highly salient in American politics, partly because of the 2016 campaign of Donald Trump" [@research]. President Trump's victory seemed to solidify the previously proposed notion that demographic changes lead to "threatened reponse" in native voters realigning voting patterns on "the basis of ethnicity, nativity, nationalism, and education" [@research]. This theory implies that as demographic changes occur, native voters shift towards more populist and outspoken anti-immigration candidates. Research of anti-immigrant and Brexit, U.K. independent party, support in the United Kingdom found that these attitudes are higher in "localities that have low immigrant shares but recent demographic changes" [@brexit]. This trend is also true of other countries in continental Europe. In the United States, previous research with county-level data have shown that pro-GOP shifts are only associated with increases in low-skilled immigrants while increases in high-skill immigrants actually increases support for the Democratic parties [@usimpact]. 
@@ -139,12 +139,12 @@ HHH combined American Community Survey (ACS) data and Census data to construct m
 HHH employ OLS regression analyses with varying explanatory variable(s) specifications and measures of 'demographic change' resulting in 8 main regression models as well as loess lines that visually and mathematically demonstrate the relevant results. They study change in proportion of Hispanics and proportion change of Hispanic proportions concluding that in places with demographic shifts, Trump did not benefit, but, in fact, Clinton did. In other words, local demographic changes are not, on their own, increasing support for anti-immigration candidates. HHH argue that this means the precincts in question are not engaging in the previously studied “threatened response” associated with voting behavior in light of immigration influxes. The authors acknowledge that "despite its disparate local impacts, immigration may be a symbolic, nationalized issue whose effects, do not depend on local experiences" [@research]. However, the actual connection has yet to be proven empirically and it is tough to address it given several exogenous factors influencing voting patterns. Some of these factors include, but are not limited to, greater exposure to international trade and declining economic prospects for the less educated. Despite these unexplored conditions, the authors explain that 'positive intergroup contact' could be responsible for the seemingly 'supportive' voting patterns at low levels of aggregation (locally). This idea is partially supported by Enos (2014), whose study shows how individuals with long(er) exposures to minority groups, tend to have less exclusionary attitudes than those who are exposed to them only briefly or those who have never been exposed at all [@enos2]. Notably, there seems to be a slight discrepancy between the apparent theoretical discussion and the actual numerical findings. The authors discuss the research in light of the different ways in which influx of immigrants affect voters' response, but the variables used in this analysis mainly focus on influx of Hispanics, who may or may not be immigrants themselves. 
 
 
-# Replication
+# Replication {-}
 
 I was able to successfully translate and replicate the main analysis of the original paper despite minor deviances that did not affect the overall conclusions of the study. Since the original analysis was done in Stata, this project required the translation of the code and a comparative analysis between the replicated and original output. A full replication of Table 1 and Figure 1  of the original paper using the most approximate R tools can be found in the appendix. 
 
 \newpage
-# Robustness Check #1: Subsetting the Data
+# Robustness Check #1: Subsetting the Data {-}
 
 One way to test for robustness is to examine the ways in which different states affect the overall trends. Notably, if a subset of the data has largely skewed results, the original findings are not invalidated given the diminished statistical significance of the subset, but the results' predictive applicability and generizability can be questioned. For this project, I decided to run the main 8 original models on a smaller subset of the data - the precincts in the state of Florida. Examining the single state allowed me to zoom in and see how these associations look like in a state that is increasingly known as a swing state in U.S. elections. 
 
@@ -245,26 +245,28 @@ stargazer(flm1, flm2, flm3, flm4, flm5, flm6, flm7, flm8,
                               "Prop. Hispanic 2011", "Prop. Change in Prop. Hispanic, 2000 to 2016",
                               "Change in Prop. Hispanic, 2000 to 2016","Prop. Hispanic 2000"),
          omit.stat = c("f", "ser"),
-         dep.var.labels.include = TRUE, dep.var.labels = "GOP Vote Share Change",
+         dep.var.labels.include = TRUE, 
+         dep.var.labels = "GOP Vote Share Change, 2012 to 2016",
          
          # Need to work on getting rid of dependent variable row.
          
          column.sep.width = "-20pt",
          no.space = T,
          notes.align = "l",
-         notes = "\\parbox[t]{10cm}{Robust standard errors are in parentheses. Precinct-level analysis in FL; weighted to number of votes 2012; proportional changes top and bottom coded at 1 and −1. Note: Dependent variable is change in GOP vote share, 2012 to 2016.}",
-         notes.append = TRUE)
+         notes = "\\parbox[t]{10cm}{Robust standard errors are in parentheses. Precinct-level analysis in FL; weighted to number of votes 2012; proportional changes top and bottom coded at 1 and −1. Note lower statistical significance and some small flips in coefficient sign.}",
+         notes.append = TRUE,
+         header = F)
 
 # *P < 0.05; **P < 0.01. Precinct-level analysis; weighted to number of votes 2012; proportional changes top
 # and bottom coded at 1 and −1. Note: Dependent variable is change in GOP vote share, 2012 to 2016. Prop., proportion.
 ```
 
 
-Despite the lack of statistical significance across many of the coefficients in Table 1, comparing these models' output and their significance to those of the original data models solidify HHH's central finding as even a small subset of the data seems to confirm their overarching conclusion that demographic shifts do not lead to increased GOP share of votes, but rather the opposite. I think the question can now become whether or not the influx of hispanics can be interpreted as an influx of immigrants (which is a big discussion in the theoretical part of the original paper) or if it simply refers to U.S. born Hispanics, which have been found in previous research to vote in favor of Democratic candidates. In the main eight regressions explored in the study, foreign born population is not included as an explanatory variable control, so this change in Hispanic proportion can be assumed to include any Hispanic in America. Notably, the appendix of the original paper contains a table that explores the effect of foreign born changes on GOP vote share. Perhaps the relationships uncovered through those models can help clarify the more specific claim discussed in the literature. Unfortunately, I was unable to gain access to the appendix for this project. Overall, these models serve as a robustness check to HHH's findings and provide some insight into the consequences of slicing the data in different ways and the potential effect individual states may be having on the data as a whole, which is further explored in the next set of models.
+Despite the lack of statistical significance across many of the coefficients in Table 1, comparing these models' output and their significance to those of the original data models solidifies HHH's central finding as even a small subset of the data seems to confirm their overarching conclusion that demographic shifts do not lead to increased GOP share of votes, but rather the opposite. I think the question can now become whether or not the influx of hispanics can be interpreted as an influx of immigrants (which is a big discussion in the theoretical part of the original paper) or if it simply refers to U.S. born Hispanics, which have been found in previous research to vote in favor of Democratic candidates. In the main eight regressions explored in the study, foreign born population is not included as an explanatory variable control, so this change in Hispanic proportion can be assumed to include any Hispanic in America. Notably, the appendix of the original paper contains a table that explores the effect of foreign born changes on GOP vote share. Perhaps the relationships uncovered through those models can help clarify the more specific claim discussed in the literature. Unfortunately, I was unable to gain access to the appendix for this project. Overall, these models serve as a robustness check to HHH's findings and provide some insight into the consequences of slicing the data in different ways and the potential effect individual states may be having on the data as a whole, which is further explored in the next set of models.
 
 
 
-Another similar, but more extensive way to test for robustness, is to build a series of models in which a different state is substracted from the sample each time. This allows to observe whether the overall trend is largely skewed by any individual state.
+Another similar, but more extensive way to test for robustness, is to build a series of models in which a different state is substracted from the sample each time. This allows us to observe whether the overall trend is largely skewed by any individual state.
 
 
 ```{r state effect, results="asis"}
@@ -275,7 +277,7 @@ Another similar, but more extensive way to test for robustness, is to build a se
 
 # The datasets minus 1 state:
 
-no_fl <- precinct_data %>% 
+no_FL <- precinct_data %>% 
   filter(st != "FL")
 
 no_GA <- precinct_data %>% 
@@ -298,49 +300,49 @@ no_WA <- precinct_data %>%
 
 # Model 3 minus one state:
 
-no_flm <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noFL <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
-         data = no_fl, 
+         data = no_FL, 
          weights = weight)
 
-no_gam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noGA <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
          data = no_GA, 
          weights = weight) 
 
-no_mim <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noMI <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
          data = no_MI, 
          weights = weight) 
 
-no_nvm <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noNV <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
          data = no_NV, 
          weights = weight) 
 
-no_ohm <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noOH <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
          data = no_OH, 
          weights = weight) 
 
-no_pam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noPA <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
          data = no_PA, 
          weights = weight) 
 
-no_wam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+noWA <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
            d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
            l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
            l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
@@ -349,7 +351,7 @@ no_wam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor +
 
 
 
-stargazer(no_flm, no_gam, no_mim, no_nvm, no_ohm, no_pam, no_wam,
+stargazer(noFL, noGA, noMI, noNV, noOH, noPA, noWA,
           title = "Change in Republican vote share 2012 to 2016 and change in Hispanic population",
          omit = c("d1611_poor", "d1611_unemp", "d1611_rent", "d1611_rent_income", "d1611_housing_150", "d1611_mfg",
                   "d1611_pop", "l11_poor", "l11_unemp", "l11_rent", "l11_rent_income", "l11_housing_150", "l11_mfg",
@@ -359,22 +361,28 @@ stargazer(no_flm, no_gam, no_mim, no_nvm, no_ohm, no_pam, no_wam,
                   covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016",
                               "Prop. Hispanic 2011"),
          omit.stat = c("f", "ser"),
-         dep.var.labels.include = FALSE,
+         dep.var.labels.include = TRUE, 
+         dep.var.labels = "GOP Vote Share Change, 2012 to 2016",
          
          # Need to work on getting rid of dependent variable row.
          
          column.sep.width = "-8pt",
-         no.space = T)
+         no.space = T,
+         object.names = TRUE, model.numbers = FALSE,
+         notes.align = "l",
+         notes = "\\parbox[t]{10cm}{Robust standard errors are in parentheses. Precinct-level Model 3 analysis with census controls excluding 1 state in each sample; weighted to number of votes 2012; proportional changes top and bottom coded at 1 and −1.}",
+         notes.append = TRUE,
+         header = F)
 
 
 ```
 
 The coefficients of these models (each of which excludes a different state) consistently support HHH's findings and conclude that the results are not driven by any single state. 
 
-# Robutness Check #2: Fixed Effects Model
+# Robutness Check #2: Fixed Effects Model {-}
 
 
-In statistics, a model that has fixed parameters or non-random quantities is called fixed effects model. In general, based on some observed factors, data can be divided into groups. The group means could be assumed as constant or non-constant across groups. And in a fixed effects model, just as its name implies, each group mean is a specifically fixed quantity. Furthermore, the assumption of fixed effect is that the group-specific effects are correlated with the independent variables. Heterogeneity in fixed effects models means different means among categories such as states. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors. However, fixed effects models can control and estimate these effects. The plm fixed effects model essentially captures any and all systematic differences across precincts that are state-invariant.
+In statistics, a model that has fixed parameters or non-random quantities is called a fixed effects model. In general, based on some observed factors, data can be divided into groups. The group means could be assumed as constant or non-constant across groups. In a fixed effects model, just as its name implies, each group mean is a specifically fixed quantity. Furthermore, the assumption of fixed effect is that the group-specific effects are correlated with the independent variables. Heterogeneity in fixed effects models means different means among categories such as states. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there is also some evidence indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors. However, fixed effects models can control and estimate these effects. The plm fixed effects model essentially captures any and all systematic differences across precincts that are state-invariant. Transforming the original models into fixed effects models, I test whether the state induced heterogeneity impacts HHH's overall findings.
 
 
 
@@ -452,25 +460,30 @@ stargazer(plm1, plm2, plm3, plm4, plm5, plm6, plm7, plm8,
                   "l11_density", "l11_black", "l11_educba", "countyid", "d1600_poor", "d1600_unemp", "d1600_mfg",
                   "d1600_pop", "l00_poor", "l00_unemp", "l00_mfg", "l00_density", "l00_black", "l00_educba",
                   "decile_repvote12"),
-                  covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016", "Prop. Change in Prop. Hispanic, 2011 to 2016",
-                              "Prop. Hispanic 2011", "Prop. Change in Prop. Hispanic, 2000 to 2016",
-                              "Change in Prop. Hispanic, 2000 to 2016","Prop. Hispanic 2000"),
+         covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016", "Prop. Change in Prop. Hispanic, 2011 to 2016", "Prop. Hispanic 2011", "Prop. Change in Prop. Hispanic, 2000 to 2016", "Change in Prop. Hispanic, 2000 to 2016","Prop. Hispanic 2000"),
          omit.stat = c("f", "ser"),
-         dep.var.labels.include = FALSE,
-         
-         # Need to work on getting rid of dependent variable row.
+         dep.var.labels.include = TRUE, 
+         dep.var.labels = "GOP Vote Share Change, 2012 to 2016",
+
+         # something strange is happening with spacing. I solved it by getting
+         # rid of the table.placement call.
          
          column.sep.width = "-15pt",
-         no.space = T)
+         no.space = TRUE,
+         notes.align = "l",
+         notes = "\\parbox[t]{10cm}{Precinct-level fixed effects analysis by state; weighted to number of votes 2012; proportional changes top and bottom coded at 1 and −1.}",
+         notes.append = TRUE,
+         # table.placement = "H",
+         header = F)
 ```
 
-Table 3 shows a lack of statistical significance for Models #1 and #5 compared to the original and replicated models, which show statistical significance across all 8 models. Notably, the overall effect of Hispanic proportion change on Republican vote share appears weak and unreliable when accounting for the systematic differences across precincts (the fixed effects model). However, the direct effect seems clearer as more explanatory variables are added. These coefficients are similar in sign and magnitude to the original findings and support HHH's findings.
+Table 3 shows a lack of statistical significance for Models #1 and #5 compared to the original and replicated models, which show statistical significance across all 8 models. Notably, the overall effect of Hispanic proportion change on Republican vote share appears weak and unreliable when accounting for the systematic differences across states (the fixed effects model). However, the direct effect seems clearer as more explanatory variables are added. These coefficients are similar in sign and magnitude to the original findings and support HHH's conclusions.
 
 
-# A New Model: Economic Indicators & Hispanic Population Change
+# A New Model: Economic Indicators & Hispanic Population Change {-}
 
 
-This model isolates economic indicators to explore their effect on republican vote share as well as its association to hispanic proportion changes.
+Notably, HHH's findings are robust and I wanted to further explore the relationship they identified to examine whether there may be alternative theoretical pathways through which this relationship exists. The literature suggests that economic factors may play a role in the effect of racial rethoric in the political arena [@usimpact]. The models I built isolate economic indicators such measure of unemployment and change in proportion of poor to explore their effect on republican vote share as well as their association to hispanic proportion changes.
 
 ```{r econ, results="asis"}
 
@@ -516,17 +529,16 @@ stargazer(ecm1, ecm1.5, ecm2, ecm2.5, ecm3,
 Table 4 explores the association between economic indicators and changes in Republican voters between 2011 and 2016. The first model indicates that changes in unemployment between 2011 and 2016 have a stronger negative effect on the change of Republican vote share (positive values indicate pro-Republican shifts) than increases in Hispanic proportion change during this time period. The magnitude is significantly greater and both values hold statistical significance. In model 2, we observe the interaction effect between Hispanic change and unemployment change is actually positive suggesting that if there is both an influx of Hispanics and a spike in unemployment, then the Republican vote share would be positively impacted. Notably, this value is not statistically significant due to its large standard error and requires further testing. Model 3 indicates that changes in proportion of poor is associated with positive change in GOP votes share, a value that is small, but statistically significant. The interaction between change in proportion of Hispanics and change in proportion of poor resulted in a miniscule positive coefficient without statiscal significance, which may indicate Republican favor, but requires further analysis. The last model shows the effect of each of these explanatory variables when controlling for the others indicating that changes in unemployment has, in fact, a much stronger influence than even Hispanic influx over the 2012-2016 period.
 
 
-# Conclusion
+# Conclusion {-}
 
 HHH argue that demographic shifts did not benefit Trump at the precinct level during the 2016 election, but rather his opponent. The authors find consistent evidence that hispanic influx led to decreased republican vote share. My replication was successful despite the deviances inherent to a translation of the original models to R. The three robustness tests further confirmed HHH's findings, which allowed me to explore a new model using economic indicators as explanatory variables to GOP vote share. The results are intriguing indicating a stronger relationship between increased unemployment and GOP vote share than any of the other variables studied. This finding suggests opportunities for further studies exploring the mechanisms through which unemployment affects the outcome. 
 
 
 
 \newpage
-# Appendix
+# Appendix {-}
 
-#### Replication of Table 1:
-
+### Replication of Table 1: {-}
 
 Table 1 presents multiple least-squares regression estimates of how changes in Hispanic populations at different time intervals correlate with increases in Republican precinct-level vote share between 2012 and 2016.
 
@@ -707,11 +719,13 @@ stargazer(m1, m2, m3, m4, m5, m6, m7, m8,
 
 
 
-### Figure 1
+### Figure 1 {-}
 
 Figure 1 (A, B, C, & D) examine(s) how changes in Hispanic populations correlate with increases in Republican precinct-level vote share between 2012 and 2016. The figure shows change in the Republican share of the 2-party vote from 2012 to 2016 (positive values indicate pro-Republican shifts) against 4 different measures of change in the Hispanic population on the x axis. The 1st frame (A) measures changing population as the change in the Hispanic proportion of the overall population from 2011 to 2016, the 2nd (B) as the same change from 2000 to 2016, and the 3rd (C) and 4th (D) as proportional changes in the Hispanic population for each period.
 
-```{r fig1a, warning = FALSE}
+```{r fig1a, warning = FALSE, include = FALSE}
+
+# Must remove include = FALSE in order to see the figure printed in the output.
 
 # This graphic replicates Fig. 1A from the paper:
 
@@ -801,7 +815,7 @@ fig1a
 
 
 
-```{r fig1b}
+```{r fig1b, warning=FALSE, include = FALSE}
 
 # This graphic replicates Fig. 1B from the paper:
 
@@ -868,7 +882,7 @@ fig1b
 
 
 
-```{r fig1c}
+```{r fig1c, warning=FALSE, include = FALSE}
 
 
 # This graphic replicates Fig. 1C from the paper:
@@ -937,7 +951,7 @@ fig1c
 
 
 
-```{r fig1d}
+```{r fig1d, warning=FALSE, include = FALSE}
 
 # This graphic replicates Fig. 1D from the paper:
 
@@ -1003,9 +1017,9 @@ fig1d
 ```
 
 
-```{r fig1}
+```{r fig1, include = FALSE}
 
-# Will potentially figure out how to put them together!
+# Exploring putting the parts of figure 1 together:
 
 # plot_grid(fig1a, fig1b)
 # plot_grid(fig1c, fig1d)
